IPE-610: Add JUnit tests, fixed SonarLint issues